# letterboxd-blend

./: .gitignore  Dockerfile  docker-compose.yml  start.sh
backend/: .gitignore  Dockerfile  Pipfile  README.md  app.py  development.env  main.py  package.json  requirements.txt  session.py  tsconfig.json  users.py
backend/env/: development.env  production.env
backend/src/: app.py  index.ts  main.py  posters.py  server.ts  session.py  users.py
backend/src/constants/: env.ts  http.ts  index.ts  misc.ts
backend/src/handlers/: blend.ts  room.ts
backend/src/middlewares/: validate.ts
backend/src/routes/: index.ts
backend/src/services/: room.ts  scraper.ts  tmdb.ts
backend/src/types/: errors.ts  index.ts  room.ts  scraper.ts
backend/src/utils/: blend.ts  data.ts
frontend/: .env.prod  .eslintrc.cjs  .prettierrc.json  Dockerfile  README.md  env.d.ts  index.html  nginx.conf  package.json  tailwind.config.cjs  tailwind.config.ts  tsconfig.json
frontend/src/: App.vue  env.ts  index.css  main.ts  query.ts  router.ts
frontend/src/api/: api.ts  avatar.ts  exists.ts  follow.ts  index.ts  session.ts  watchlist.ts
frontend/src/components/: AutoComplete.vue  Avatar.vue  CachedImage.vue  Carousel.vue  PosterWithAvatars.vue  ThemeSwitch.vue
frontend/src/pages/: Form.vue  Home.vue  Result.vue
frontend/src/types/: followers.ts  following.ts  (+1 more)
room/: .eslintrc.json  package.json
room/env/: development.env  production.env  test.env
room/src/: index.ts  server.ts  socket.ts
scraper/: Dockerfile  pyproject.toml
scraper/app/: __init__.py  movies.py  users.py
(+23 files in other folders)
